--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -37,4 +37,8 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
-urlCheck: http://localhost:8083
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
