--- a/api-movie.yml
+++ b/api-movie.yml
@@ -21,7 +21,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
         format_sql: true
-    show-sql: false
+    show-sql: true
 
 info:
   application:
