--- a/api-serie.yml
+++ b/api-serie.yml
@@ -3,6 +3,11 @@ server:
 spring:
   application:
     name: api-serie
+  rabbitmq:
+    username: sofia
+    password: sofia
+    host: localhost
+    port: 5672
   zipkin:
     baseUrl: http://localhost:9411/
   datasource:
