--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -4,8 +4,8 @@ spring:
   application:
     name: api-catalog
   rabbitmq:
-    username: sofia
-    password: sofia
+    username: guest
+    password: guest
     host: localhost
     port: 5672
   zipkin:
