--- a/api-serie.yml
+++ b/api-serie.yml
@@ -4,8 +4,8 @@ spring:
   application:
     name: api-serie
   rabbitmq:
-    username: sofia
-    password: sofia
+    username: guest
+    password: guest
     host: localhost
     port: 5672
   zipkin:
