--- a/api-serie.yml
+++ b/api-serie.yml
@@ -3,32 +3,22 @@ server:
 spring:
   application:
     name: api-serie
+  mongodb:
+   embedded:
+    version: 4.0.2
+  data:
+   mongodb:
+    database: test
+    port: 27017
+     
   rabbitmq:
     username: guest
     password: guest
     host: localhost
     port: 5672
+    
   zipkin:
     baseUrl: http://localhost:9411/
-  datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/movie-dev
-    username: usr-movie
-    password: pwd-movie
-
-  jpa:
-    generate-ddl: true
-    hibernate:
-      enable_lazy_load_no_trans: true
-      event:
-        merge:
-          entity_copy_observer: allow
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL10Dialect
-        format_sql: true
-    show-sql: true
 
 info:
   application:
