--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -17,7 +17,7 @@ spring:
         - id: api-movie
           uri: lb://api-movie
           predicates:
-            - Path=/api/v1/movie/**
+            - Path=/api/v1/movies/**
 
 info:
   app:
