--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -3,14 +3,13 @@ server:
 spring:
   application:
     name: api-catalog
-
+  mongodb:
+    embedded:
+      version: 4.0.2
   data:
     mongodb:
-      username: usr-movie-mongo
-      password: pwd-movie-mongo
-      database: movie-dev-mongo
+      database: test
       port: 27017
-      host: localhost
 
 info:
   application:
