--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -1,5 +1,5 @@
 server:
-  port: 0
+  port: ${PORT:${SERVER_PORT:0}}
 spring:
   application:
     name: api-catalog
@@ -10,7 +10,13 @@ spring:
       database: movie-dev-mongo
       port: 27017
       host: localhost
-
+  rabbitmq:
+     username: guest
+     password: guest
+     host: localhost
+     port: 5672
+  zipkin:
+    baseUrl: http://localhost:9411/
 info:
   application:
     name: api-catalog
